--- a/solution/ui/regulations/css/scss/partials/_jump_to.scss
+++ b/solution/ui/regulations/css/scss/partials/_jump_to.scss
@@ -87,6 +87,10 @@ form .jump-to-input {
         @include custom-max(($eds-width-md - 1) / 1px) {
             width: 70px;
         }
+
+        @include custom-max(($eds-width-sm - 1) / 1px) {
+            width: 65px;
+        }
     }
 
     input#jumpToSection {
@@ -95,6 +99,10 @@ form .jump-to-input {
 
         @include custom-max(($eds-width-sm - 1) / 1px) {
             width: 60px;
+        }
+
+        @include custom-max(($eds-width-sm - 1) / 1px) {
+            width: 45px;
         }
     }
 
