feat: move banner styles into stylesheet; no more blue background

--- a/solution/ui/regulations/css/scss/main.scss
+++ b/solution/ui/regulations/css/scss/main.scss
@@ -42,4 +42,5 @@ $eregs-image-path: "../images" !default;
 @import "partials/jump_to";
 @import "partials/supplemental_content";
 @import "partials/subjects";
+@import "partials/banner";
 @import 'print';
