--- a/solution/ui/regulations/css/scss/_print.scss
+++ b/solution/ui/regulations/css/scss/_print.scss
@@ -33,8 +33,8 @@ $left-right-padding: 40px;
     }
 
     header {
-        height: 48px;
-        min-height: 48px;
+        height: 56px;
+        min-height: 56px;
         padding: 0 $left-right-padding;
         border-top: 1px solid $secondary_color;
         border-bottom: 1px solid $secondary_color;
@@ -59,49 +59,19 @@ $left-right-padding: 40px;
         }
 
         .header--content-container {
-            .title-container {
-                display: flex;
-                flex-direction: row;
-                flex: 1;
-                align-items: center;
-            }
-
-            .site-title {
-                font-size: 14px;
-                font-weight: 700;
-                line-height: 18px;
-                display: inline-block;
-            }
-
-            .reg-title {
-                display: block;
-                flex: 2;
-                padding-right: $spacer-2;
-                font-size: 12px;
-                line-height: 16px;
-                padding-left: $spacer-2;
-                margin-left: $spacer-2;
-                border-left: 1px solid $border_color;
-
-                a {
-                    max-width: $text-max-width;
-                    display: inline-block;
-                }
-            }
-
-            .header-part-name {
-                display: inline;
-            }
-
             .header--brand {
                 width: 140px;
                 height: 100%;
                 border-right: 1px solid $light_gray;
                 padding-left: 0px;
+                font-size: $font-size-sm;
+                line-height: 18px;
             }
 
             .header--jump-to,
-            .header--links-search {
+            .header--links,
+            .header--search,
+            .header__row--second {
                 display: none;
             }
         }
