--- a/solution/backend/regulations/templates/regulations/statute.html
+++ b/solution/backend/regulations/templates/regulations/statute.html
@@ -17,10 +17,12 @@
     id="vite-app"
     data-api-url="{{ API_BASE }}"
     data-about-url="{% url 'about' %}"
+    data-custom-login-url="{% url 'custom_login' %}"
     data-custom-url="{{ CUSTOM_URL }}"
     data-home-url="{% url 'homepage' %}"
+    data-host="{{ host }}"
+    data-is-authenticated="{{ is_authenticated }}"
     data-search-url="{% url 'search' %}"
     data-subjects-url="{% url 'subjects' %}"
-    data-host="{{ host }}"
 ></div>
 {% endblock %}
