--- a/solution/backend/regulations/templates/regulations/partials/header.html
+++ b/solution/backend/regulations/templates/regulations/partials/header.html
@@ -20,11 +20,13 @@
             ></header-search>
         </template>
         <template #sign-in>
-            <header-sign-in
-                custom-login-url="{% url 'custom_login' %}"
-                home-url="{% url 'homepage' %}"
-                is-authenticated="{{ is_authenticated }}"
-            ></header-sign-in>
+            {% if not is_authenticated and not hide_login %}
+                <header-sign-in
+                    custom-login-url="{% url 'custom_login' %}"
+                    home-url="{% url 'homepage' %}"
+                    is-authenticated="{{ is_authenticated }}"
+                ></header-sign-in>
+            {% endif %}
         </template>
     </header-component>
 </header>
