feat: get sign in link visibility states working everywhere used

--- a/solution/backend/regulations/templates/regulations/partials/login_sidebar_banner.html
+++ b/solution/backend/regulations/templates/regulations/partials/login_sidebar_banner.html
@@ -7,7 +7,7 @@
             <sign-in-link
                 custom-login-url="{% url 'custom_login' %}"
                 home-url="{% url 'homepage' %}"
-                is-authenticated="{{ is_authenticated }}"
+                is-authenticated="{{ user.is_authenticated }}"
             ></sign-in-link>
         </span>
         to see internal resources.
