--- a/solution/backend/regulations/templates/regulations/partials/header.html
+++ b/solution/backend/regulations/templates/regulations/partials/header.html
@@ -20,11 +20,11 @@
             ></header-search>
         </template>
         <template #sign-in>
-            {% if not is_authenticated and not hide_login %}
+            {% if not user.is_authenticated and not hide_login %}
                 <sign-in-link
                     custom-login-url="{% url 'custom_login' %}"
                     home-url="{% url 'homepage' %}"
-                    is-authenticated="{{ is_authenticated }}"
+                    is-authenticated="{{ user.is_authenticated }}"
                 ></sign-in-link>
             {% endif %}
         </template>
