--- a/solution/backend/regulations/templates/regulations/statute.html
+++ b/solution/backend/regulations/templates/regulations/statute.html
@@ -21,7 +21,7 @@
     data-custom-url="{{ CUSTOM_URL }}"
     data-home-url="{% url 'homepage' %}"
     data-host="{{ host }}"
-    data-is-authenticated="{{ is_authenticated }}"
+    data-is-authenticated="{{ user.is_authenticated }}"
     data-search-url="{% url 'search' %}"
     data-subjects-url="{% url 'subjects' %}"
 ></div>
