chore: hide sign in in mobile view when search form expanded

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -367,7 +367,10 @@ header {
                 margin-left: 1rem;
                 text-transform: capitalize;
             }
+        }
 
+        .header--search:has(.search__form--expanded) + .header--sign-in {
+            display: none;
         }
     }
 }
