--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -7,6 +7,21 @@
 $header_input_height_narrow: 45px;
 $header_input_height_wide: 40px;
 
+.dropdown-menu__container {
+    position: absolute;
+    right: 0px;
+    top: 40px;
+    white-space: nowrap;
+    background: $lightest_gray;
+    padding: 20px 30px;
+    z-index: 1;
+    border: 1px solid $light_gray;
+    border-radius: 3px;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+}
+
 header {
     box-sizing: unset;
 
@@ -137,6 +152,8 @@ header {
             }
 
             .links--container {
+                position: relative;
+
                 @include custom-max(($eds-width-header-links - 1) / 1px) {
                     display: flex;
                 }
@@ -169,15 +186,8 @@ header {
                 }
 
                 .more--dropdown-menu {
-                    position: absolute;
-                    top: 115px;
-                    background: $lightest_gray;
-                    margin-left: 12px;
-                    border: 1px solid $light_gray;
-                    border-radius: 3px;
-                    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
-                    -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
-                    -moz-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+                    top: $header_height_mobile;
+                    margin-top: 15px;
 
                     @include custom-min($eds-width-header-links / 1px) {
                         display: none;
@@ -193,7 +203,6 @@ header {
 
                     &.links__list--dropdown {
                         margin: 0;
-                        padding: 20px 30px;
 
                         li {
                             &:not(:last-child) {
@@ -407,6 +416,11 @@ header {
                             fill: white;
                         }
                     }
+                }
+
+                & + .dropdown-menu--account {
+                    top: 56px;
+                    right: 1rem;
                 }
             }
         }
