feat: get username and logout link working in django templates

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -421,6 +421,17 @@ header {
                 & + .dropdown-menu--account {
                     top: 56px;
                     right: 1rem;
+                    max-width: 250px;
+                    white-space: normal;
+
+                    .account-info {
+                        padding: 0.5rem;
+
+                        .account-message {
+                            margin: 0.25rem 0;
+                            font-size: $font-size-sm;
+                        }
+                    }
                 }
             }
         }
