--- a/solution/backend/regulations/templates/regulations/partials/header.html
+++ b/solution/backend/regulations/templates/regulations/partials/header.html
@@ -21,7 +21,25 @@
         </template>
         <template #sign-in>
             {% if user.is_authenticated %}
-                <user-icon />
+                <user-icon>
+                    <template #username>
+                        {{ user.username }}
+                    </template>
+                    <template #sign-out-link>
+                        <form
+                            id="oidc_logout"
+                            method="post"
+                            {% if request.session.oidc_id_token %}
+                                action="{% url 'oidc_logout' %}"
+                            {% else %}
+                                action="{% url 'logout' %}?next={{ request.path }}"
+                            {% endif %}
+                        >
+                            {% csrf_token %}
+                            <input id="logout" type="submit" value="Log Out" />
+                        </form>
+                    </template>
+                </user-icon>
             {% else %}
                 <sign-in-link
                     custom-login-url="{% url 'custom_login' %}"
