--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -403,6 +403,7 @@ header {
                     }
                 }
 
+                &--expanded,
                 &:hover,
                 &:focus,
                 &.active {
