--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -22,5 +22,6 @@
     data-statutes-url="{% url 'statutes' %}"
     data-subjects-url="{% url 'subjects' %}"
     data-survey-url="{{ SURVEY_URL }}"
+    data-username="{{ user.username }}"
 ></div>
 {% endblock %}
