--- a/solution/backend/regulations/templates/regulations/statute.html
+++ b/solution/backend/regulations/templates/regulations/statute.html
@@ -25,5 +25,6 @@
     data-is-authenticated="{{ user.is_authenticated }}"
     data-search-url="{% url 'search' %}"
     data-subjects-url="{% url 'subjects' %}"
+    data-username="{{ user.username }}"
 ></div>
 {% endblock %}
