--- a/solution/backend/regulations/templates/regulations/subjects.html
+++ b/solution/backend/regulations/templates/regulations/subjects.html
@@ -23,5 +23,6 @@
     data-statutes-url="{% url 'statutes' %}"
     data-subjects-url="{% url 'subjects' %}"
     data-survey-url="{{ SURVEY_URL }}"
+    data-username="{{ user.username }}"
 ></div>
 {% endblock %}
