fix: height tweak

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -472,6 +472,10 @@ header {
                                 padding: 0;
                             }
                         }
+
+                        form input {
+                            height: 22px;
+                        }
                     }
                 }
             }
