fix: apply correct style to sign in link on login page

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -376,6 +376,13 @@ header {
                 margin-top: auto;
             }
 
+            &.active {
+                a {
+                    @include header__anchor--active-bold;
+                    padding: 0;
+                }
+            }
+
             a {
                 @include header__anchor--bold;
 
