fix: remove white background for sign out link on login page

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -481,6 +481,7 @@ header {
                         }
 
                         form input {
+                            background-color: unset;
                             height: 22px;
                         }
                     }
