test: fix part test

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -200,6 +200,7 @@ header {
 
                 ul.links__list {
                     list-style: none;
+                    padding: 0;
 
                     &.links__list--dropdown {
                         margin: 0;
