test: fix statutes test; tweak more dropdown styles

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -186,15 +186,8 @@ header {
                 }
 
                 .more--dropdown-menu {
-                    top: $header_height_mobile;
-                    margin-top: 15px;
-
-                    @include custom-min($eds-width-header-links / 1px) {
+                    @include custom-min($eds-width-sm / 1px) {
                         display: none;
-                    }
-
-                    @include custom-max(($eds-width-sm - 1) / 1px) {
-                        right: 15px;
                     }
                 }
 
