fix: disable Sign In link when not logged in and on the login page

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -374,6 +374,7 @@ header {
                 a {
                     @include header__anchor--active-bold;
                     padding: 0;
+                    pointer-events: none;
                 }
             }
 
