feat: do not render anchor for sign in link when on login page

--- a/solution/backend/regulations/templates/regulations/partials/header.html
+++ b/solution/backend/regulations/templates/regulations/partials/header.html
@@ -34,6 +34,7 @@
                     custom-login-url="{% url 'custom_login' %}"
                     home-url="{% url 'homepage' %}"
                     is-authenticated="{{ user.is_authenticated }}"
+                    location="{{ location }}"
                 ></sign-in-link>
             {% endif %}
         </template>
