--- a/solution/backend/regulations/templates/regulations/login.html
+++ b/solution/backend/regulations/templates/regulations/login.html
@@ -8,7 +8,7 @@
 {% block title_prefix %}Single sign-on to CMCS | {% endblock %}
 
 {% block header %}
-    {% include "regulations/partials/header.html" %}
+    {% include "regulations/partials/header.html" with location="login_page" %}
 {% endblock %}
 
 {% block body %}
