EREGCSC-2619 -- Add Sign In/Out to Header (#1279)
* feat: create loginUrl composable to encapsulate logic

* feat: add (crude) sign in link to all SPA headers

* feat: sign in url halfway working in django template

* feat: further django template redirect url work

* feat: refactor composable into a single function that can be used in SPA or Django

* feat: hide sign in link on Sign In page

* chore: rename HeaderSignIn to more generic SignInLink

* refactor: replace reader view right sidebar sign in link with new SignInLink component

* feat: get sign in link visibility states working everywhere used

* feat: style header sign in link

* chore: hide sign in in mobile view when search form expanded

* refactor: pass route in from front end view

* feat: remove route from SignInLink in search view for now

* feat: use setup method in Options API Search view to get composable to work

* feat: focus styles for sign in anchor

* feat: add UserIcon SVG/component and add to all pages

* feat: basic HeaderDropdownMenu generic component

* feat: move dropdown toggle logic to composable

* feat: get username and logout link working in django templates

* feat: for SPA routes, hide logout form and submit programmatically

* chore: rename UserIcon component to more relevant name

* style: green fill style for user icon when menu is expanded

* feat: pass username into SPA

* feat: tweak login composable logic

* chore: remove bottom right login indicator

* feat: style username width

* feat: style sign out button

* chore: minor a11y tweaks

* fix: height tweak

* fix: apply correct style to sign in link on login page

* fix: remove white background for sign out link on login page

* test: add eregsLogout utility method; fix analytics test suite

* test: fix part test

* test: fix statutes test; tweak more dropdown styles

* test: fix subjects tests

* test: login and logout test suite

* test: simplify 

--- a/solution/backend/regulations/templates/regulations/partials/header.html
+++ b/solution/backend/regulations/templates/regulations/partials/header.html
@@ -19,5 +19,24 @@
                 search-url="{% url 'search' %}"
             ></header-search>
         </template>
+        <template #sign-in>
+            {% if user.is_authenticated %}
+                <header-user-widget>
+                    <template #username>
+                        {{ user.username }}
+                    </template>
+                    <template #sign-out-link>
+                        {% include "regulations/partials/logout_form.html" %}
+                    </template>
+                </header-user-widget>
+            {% else %}
+                <sign-in-link
+                    custom-login-url="{% url 'custom_login' %}"
+                    home-url="{% url 'homepage' %}"
+                    is-authenticated="{{ user.is_authenticated }}"
+                    location="{{ location }}"
+                ></sign-in-link>
+            {% endif %}
+        </template>
     </header-component>
 </header>
