feat: basic admin URL string for django template usage

--- a/solution/backend/regulations/templates/regulations/partials/header.html
+++ b/solution/backend/regulations/templates/regulations/partials/header.html
@@ -26,7 +26,7 @@
                         {{ user.username }}
                     </template>
                     <template #account-links>
-                        <a href="/" rel="noopener noreferrer">Manage Content</a>
+                        <a href="{% url 'homepage' %}admin" rel="noopener noreferrer">Manage Content</a>
                     </template>
                     <template #sign-out-link>
                         {% include "regulations/partials/logout_form.html" %}
