feat: pull Django-created adminUrl in to app and use in all headers

--- a/solution/backend/regulations/templates/regulations/partials/header.html
+++ b/solution/backend/regulations/templates/regulations/partials/header.html
@@ -21,7 +21,7 @@
         </template>
         <template #sign-in>
             {% if user.is_authenticated %}
-                <header-user-widget home-url="{% url 'homepage' %}">
+                <header-user-widget admin-url="{% url 'admin:index' %}">
                     <template #username>
                         {{ user.username }}
                     </template>
