--- a/solution/backend/regulations/templates/regulations/subjects.html
+++ b/solution/backend/regulations/templates/regulations/subjects.html
@@ -11,6 +11,7 @@
 {% block body %}
 <div
     id="vite-app"
+    data-admin-url="{% url 'admin:index' %}"
     data-api-url="{{ API_BASE }}"
     data-about-url="{% url 'about' %}"
     data-custom-login-url="{% url 'custom_login' %}"
